--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 log = "0.4"
 nom = "8.0"
 tokio = { version = "1.45", features = ["net", "io-util", "macros", "rt-multi-thread"] }
-reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "rustls-tls"] }
 async-channel = "2.3"
 rocksdb = { version = "0.23", default-features = false, features = ["zstd", "bindgen-runtime"] }
 
@@ -23,4 +23,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11"
 serde_json = "1.0"
 
+base64 = "0.22"
+hmac = "0.12"
+sha2 = { version = "0.10", default-features = false }
+
 derive_more = { version = "2.0", features = ["from_str", "display"] }
+rumqttc = "0.24"
+chrono = "0.4"
