--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ sha2 = { version = "0.10", default-features = false }
 derive_more = { version = "2.0", features = ["from_str", "display"] }
 rumqttc = "0.24"
 chrono = "0.4"
+byteorder = "1.5"
+regex = "1.11"
