--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,7 @@ rumqttc = "0.24"
 chrono = "0.4"
 byteorder = "1.5"
 regex = "1.11"
+fnv = "1.0"
+num-complex = "0.4"
+ndarray = "0.16"
+once_cell = "1.19"
