--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 log = "0.4"
+log4rs = { version = "1.3", features = ["gzip"] }
 nom = "8.0"
 tokio = { version = "1.45", features = ["net", "io-util", "macros", "rt-multi-thread"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "rustls-tls"] }
