--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,9 @@ fnv = "1.0"
 num-complex = "0.4"
 ndarray = "0.16"
 once_cell = "1.19"
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = "z"      # 或 "s"，都用于减小体积
+panic = "abort"
