--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ actix-cors = { version = "0.7"}
 actix-files = { version = "0.6"}
 
 serde = { version = "1.0", features = ["derive"] }
+serde_repr = "0.1"
 serde_cbor = "0.11"
 serde_json = "1.0"
 
