--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
 serde_cbor = "0.11"
 serde_json = "1.0"
+serde_with = "3.4"
 
 base64 = "0.22"
 hmac = "0.12"
